--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>쿠팡 서부산 2W 근무 시작까지 남은 시간</title>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet" />
   <style>
     body {
       font-family: 'Noto Sans KR', sans-serif;
@@ -27,12 +28,74 @@
 
     .title-line2 {
       font-size: 1.6rem;
-      font-weight: bol층 </div>
-    <div class="title-line2">
-      <span id="work-date"></span> 
+      font-weight: bold;
+    }
+
+    .timer-container {
+      margin-top: 2rem;
+    }
+
+    .blinking {
+      animation: blink 1s step-start infinite;
+    }
+
+    .blinking-icon {
+      font-size: 2rem;
+      animation: blink 1s step-start infinite;
+    }
+
+    @keyframes blink {
+      50% {
+        opacity: 0;
+      }
+    }
+
+    .progress-bar-container {
+      width: 100%;
+      background-color: #444;
+      border-radius: 10px;
+      overflow: hidden;
+      margin-top: 20px;
+      height: 30px;
+    }
+
+    .progress-bar-fill {
+      height: 100%;
+      background-color: #4caf50;
+      width: 0%;
+      transition: width 0.5s ease;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .progress-bar-danger {
+      background-color: #e53935 !important;
+    }
+
+    .progress-bar-text {
+      font-weight: bold;
+    }
+
+    .logo {
+      margin-top: 20px;
+      width: 120px;
+    }
+
+    .work-message {
+      margin-top: 1rem;
+      font-size: 1.2rem;
+    }
+  </style>
+</head>
+<body>
+  <div id="title">
+    <h1 class="title-line1">서부산 소분3(2W)</h1>
+    <h2 class="title-line2">
+      <span id="work-date"></span>
       <span> 근무 시작까지 남은 시간</span>
-    </div>
-  </h1>
+    </h2>
+  </div>
 
   <div class="timer-container">
     <div id="alarm-icon" class="blinking-icon">⏰</div>
