--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>쿠팡 서부산 2W 근무 시작까지 남은 시간</title>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet" />
   <style>
     body {
       font-family: 'Noto Sans KR', sans-serif;
@@ -32,70 +31,155 @@
     }
 
     .timer-container {
-      margin-top: 2rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 0;
+    }
+
+    #alarm-icon {
+      font-size: 1.5rem;
+      animation: blink-visibility 1s step-start infinite;
+      color: red;
+      margin-bottom: 2px;
+      line-height: 1;
+      user-select: none;
+      display: inline-block;
+    }
+
+    #timer {
+      font-size: 6rem;
+      font-weight: bold;
+      color: #fff;
+      line-height: 1;
     }
 
     .blinking {
-      animation: blink 1s step-start infinite;
+      color: red !important;
+      animation: blink-visibility 1s step-start infinite;
     }
 
     .blinking-icon {
-      font-size: 2rem;
-      animation: blink 1s step-start infinite;
+      animation: blink-visibility 1s step-start infinite;
+      color: red;
+      font-size: 1.5rem;
+      line-height: 1;
+      user-select: none;
+      display: inline-block;
     }
 
-    @keyframes blink {
-      50% {
-        opacity: 0;
+    @keyframes blink-visibility {
+      0%, 49% {
+        visibility: visible;
+      }
+      50%, 100% {
+        visibility: hidden;
       }
     }
 
+    .address {
+      margin-bottom: 10px;
+      font-size: 1.5rem;
+      color: #ccc;
+    }
+
+    img {
+      max-height: 150px;
+      border-radius: 12px;
+    }
+
+    .work-message {
+      margin-top: 10px;
+      font-size: 1.6rem;
+      color: #fff;
+      font-weight: bold;
+    }
+
     .progress-bar-container {
-      width: 100%;
-      background-color: #444;
+      width: 450px;
+      height: 20px;
+      background-color: #eee;
       border-radius: 10px;
       overflow: hidden;
       margin-top: 20px;
-      height: 30px;
+      position: relative;
     }
 
     .progress-bar-fill {
       height: 100%;
-      background-color: #4caf50;
       width: 0%;
-      transition: width 0.5s ease;
+      background-color: #0D3BB3;
+      transition: width 0.3s ease, background-color 0.3s ease;
+      position: relative;
       display: flex;
-      align-items: center;
       justify-content: center;
-    }
-
-    .progress-bar-danger {
-      background-color: #e53935 !important;
+      align-items: center;
     }
 
     .progress-bar-text {
+      position: absolute;
+      width: 100%;
+      text-align: center;
+      pointer-events: none;
+      user-select: none;
       font-weight: bold;
+      font-size: 0.9rem;
+      z-index: 1;
     }
 
-    .logo {
-      margin-top: 20px;
-      width: 120px;
+    .progress-bar-danger {
+      background-color: red !important;
     }
 
-    .work-message {
-      margin-top: 1rem;
-      font-size: 1.2rem;
+    @media (max-width: 600px) {
+      #title {
+        margin-top: 6rem;
+      }
+
+      #timer {
+        font-size: 4rem;
+      }
+
+      .title-line1 {
+        font-size: 1.5rem;
+      }
+
+      .title-line2 {
+        font-size: 1.4rem;
+        font-weight: bold;
+      }
+
+      .address {
+        margin-bottom: 10px;
+        font-size: 1.3rem;
+      }
+
+      .blinking-icon {
+        font-size: 1rem;
+      }
+
+      .progress-bar-container {
+        width: 90%;
+        height: 16px;
+      }
+
+      .work-message {
+        font-size: 1.5rem;
+      }
     }
   </style>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap" rel="stylesheet" />
 </head>
 <body>
-  <div id="title">
-    <h1 class="title-line1">서부산 소분3(2W)</h1>
-    <h2 class="title-line2">
-      <span id="work-date"></span>
+  <h1 id="title">
+    <div class="title-line1"></div>
+    <div class="address">근무지 주소 : 부산시 서구 암남동 633-26, 6층</div>
+    <div class="title-line2">
+      <span id="work-date"></span> 
       <span> 근무 시작까지 남은 시간</span>
-    </h2>
-  </div>
+    </div>
+  </h1>
 
   <div class="timer-container">
     <div id="alarm-icon" class="blinking-icon">⏰</div>
@@ -169,7 +253,7 @@
         displayDate.setDate(displayDate.getDate() + 1);
       }
 
-      document.querySelector(".title-line1").textContent = "서부산 소분3(2W)";
+      document.querySelector(".title-line1").textContent = "서부산1캠프 소분3(2W)";
       document.getElementById("work-date").textContent = formatDate(displayDate);
 
       let start = new Date(todayTarget);
